# capture-room

./: .gitignore  ARCHITECTURE.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json  settings.local.json
.claude/projects/-home-javenk-Projects-capture-room/memory/: MEMORY.md  project-capture-room.md
node/: Cargo.toml  build.rs
node/migrations/: 0001_init.sql  0002_presets.sql  0003_test_sources.sql
node/src/: main.rs  plugins.rs  state.rs  ws.rs
node/src/api/: mod.rs  types.rs
node/src/api/controller/: mod.rs
node/src/api/node/: mod.rs
node/src/audio/: mod.rs
node/src/benchmark/: mod.rs
node/src/controller/: mod.rs  proxy.rs  registry.rs  scheduler.rs  sync.rs
node/src/db/: mod.rs
node/src/pipeline/: mod.rs  monitor.rs  profile.rs
node/src/recording/: mod.rs
node/src/sources/: manager.rs  mod.rs  ndi.rs  registry.rs  test.rs
node/src/thumbnail/: mod.rs
node/src/timecode/: mod.rs
ui/: components.json  package.json  vite.config.ts
ui/src/: App.vue  main.ts  style.css
ui/src/components/: AudioMeter.vue  FeedCard.vue
ui/src/components/ui/input/: Input.vue
ui/src/composables/: useApi.ts  useWebSocket.ts
ui/src/router/: index.ts
ui/src/stores/: nodes.ts  presets.ts  recordings.ts  schedules.ts  sources.ts
ui/src/views/: DashboardView.vue  LogsView.vue  NodesView.vue  PresetsView.vue  RecordingsView.vue  SchedulesView.vue  SourcesView.vue
