[package]
name = "capture-room"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capture-room"
path = "src/main.rs"

[features]
export-types = ["ts-rs/export"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
ts-rs = { version = "10", optional = true }
