[package]
name = "capture-room"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capture-room"
path = "src/main.rs"

[features]
export-types = []

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
gstreamer = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
