[package]
name = "capture-room"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capture-room"
path = "src/main.rs"

[features]
export-types = ["dep:ts-rs"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
gstreamer = "0.23"
gstreamer-app = "0.23"
gst-plugin-ndi = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git", rev = "894e437dffa6851929ad48b85e7970943d650ed9", features = ["static"] }
mdns-sd = "0.13"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
